Implements @bundly/ic-core-js instead of local package

--- a/frontend/apps/webapp/package.json
+++ b/frontend/apps/webapp/package.json
@@ -22,7 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "firebase": "^10.7.1",
-    "icp-connect-core": "*",
+    "@bundly/ic-core-js": "^0.1.2",
     "icp-connect-react": "*",
     "lucide-react": "^0.294.0",
     "next": "^14.0.4",
