--- a/frontend/apps/mobileapp/package.json
+++ b/frontend/apps/mobileapp/package.json
@@ -19,7 +19,7 @@
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
-    "icp-connect-core": "*",
+    "@bundly/ic-core-js": "^0.1.2",
     "icp-connect-react": "*",
     "icp-connect-react-native": "*",
     "lucide-react-native": "^0.302.0",
