--- a/frontend/packages/icp-connect-react-native/package.json
+++ b/frontend/packages/icp-connect-react-native/package.json
@@ -17,7 +17,7 @@
     "expo-device": "^5.6.0",
     "expo-secure-store": "^12.5.0",
     "expo-web-browser": "^12.5.0",
-    "icp-connect-core": "*"
+    "@bundly/ic-core-js": "^0.1.2"
   },
   "devDependencies": {
     "ts-loader": "^9.5.1",
