--- a/frontend/packages/icp-connect-react/package.json
+++ b/frontend/packages/icp-connect-react/package.json
@@ -9,11 +9,11 @@
     "clean": "rm -rf build && rm -rf .turbo && rm -rf node_modules"
   },
   "dependencies": {
+    "@bundly/ic-core-js": "^0.1.2",
     "@dfinity/agent": "^0.20.2",
     "@dfinity/auth-client": "^0.20.2",
     "@dfinity/identity": "^0.20.2",
     "@dfinity/principal": "^0.20.2",
-    "icp-connect-core": "*",
     "react": "^18.2.0"
   },
   "devDependencies": {
