--- a/frontend/packages/icp-connect-react-native/package.json
+++ b/frontend/packages/icp-connect-react-native/package.json
@@ -9,6 +9,7 @@
     "clean": "rm -rf build && rm -rf .turbo && rm -rf node_modules"
   },
   "dependencies": {
+    "@bundly/ic-core-js": "^0.1.3",
     "@dfinity/agent": "^0.20.2",
     "@dfinity/auth-client": "^0.20.2",
     "@dfinity/identity": "^0.20.2",
@@ -16,8 +17,7 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "expo-device": "^5.6.0",
     "expo-secure-store": "^12.5.0",
-    "expo-web-browser": "^12.5.0",
-    "@bundly/ic-core-js": "^0.1.2"
+    "expo-web-browser": "^12.5.0"
   },
   "devDependencies": {
     "ts-loader": "^9.5.1",
