--- a/frontend/packages/icp-connect-react-native/package.json
+++ b/frontend/packages/icp-connect-react-native/package.json
@@ -25,12 +25,9 @@
     "expo-device": "^5.6.0",
     "expo-modules-core": "^1.5.12",
     "expo-secure-store": "^12.5.0",
-    "expo-web-browser": "^12.5.0",
-    "react-native": "^0.73.2"
+    "expo-web-browser": "^12.5.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.48",
-    "@types/react-native": "^0.73.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
