--- a/frontend/apps/mobileapp/package.json
+++ b/frontend/apps/mobileapp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@bundly/ic-core-js": "^0.1.3",
     "@bundly/ic-react": "^0.1.3",
+    "@bundly/ic-react-native": "^0.2.5",
     "big-integer": "^1.6.52",
     "classnames": "^2.5.1",
     "expo": "~49.0.15",
@@ -21,7 +22,6 @@
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
-    "icp-connect-react-native": "*",
     "lucide-react-native": "^0.302.0",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
