--- a/frontend/packages/icp-connect-react-native/package.json
+++ b/frontend/packages/icp-connect-react-native/package.json
@@ -25,7 +25,6 @@
     "clean": "rm -rf build && rm -rf .turbo && rm -rf node_modules"
   },
   "dependencies": {
-    "ic-core-js": "*",
     "@dfinity/agent": "^0.20.2",
     "@dfinity/auth-client": "^0.20.2",
     "@dfinity/identity": "^0.20.2",
@@ -35,7 +34,10 @@
     "expo-device": "^5.6.0",
     "expo-modules-core": "^1.5.12",
     "expo-secure-store": "^12.5.0",
-    "expo-web-browser": "^12.5.0"
+    "expo-web-browser": "^12.5.0",
+    "ic-core-js": "*",
+    "ic-react": "*",
+    "react-native": "^0.73.2"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
