--- a/frontend/apps/mobileapp/package.json
+++ b/frontend/apps/mobileapp/package.json
@@ -26,7 +26,7 @@
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-get-random-values": "^1.10.0",
+    "react-native-get-random-values": "~1.9.0",
     "react-native-polyfill-globals": "^3.1.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
