--- a/frontend/apps/webapp/tsconfig.json
+++ b/frontend/apps/webapp/tsconfig.json
@@ -1,16 +1,13 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "target": "esnext",
+    "module": "esnext",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -18,23 +15,16 @@
     "incremental": true,
     "plugins": [
       {
-        "name": "next"
-      }
+        "name": "next",
+      },
     ],
     "paths": {
-      "@app/*": [
-        "./src/*"
-      ]
-    }
+      "@app/components/*": ["./src/components/*"],
+      "@app/hooks/*": ["./src/hooks/*"],
+      "@app/lib/*": ["./src/lib/*"],
+      "@app/declarations/*": ["./src/declarations/*"],
+    },
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "build/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["**/node_modules", "**/.*/*"],
+  "include": ["src", "build/types/**/*.ts", ".next/types/**/*.ts"],
 }
