--- a/frontend/packages/ic-core-js/package.json
+++ b/frontend/packages/ic-core-js/package.json
@@ -31,7 +31,8 @@
     "@dfinity/auth-client": "^0.20.2",
     "@dfinity/candid": "^0.20.2",
     "@dfinity/identity": "^0.20.2",
-    "@dfinity/principal": "^0.20.2"
+    "@dfinity/principal": "^0.20.2",
+    "events": "^3.3.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
