--- a/frontend/apps/webapp/tsconfig.json
+++ b/frontend/apps/webapp/tsconfig.json
@@ -20,9 +20,10 @@
     ],
     "paths": {
       "@app/components/*": ["./src/components/*"],
+      "@app/context/*": ["./src/context/*"],
+      "@app/declarations/*": ["./src/declarations/*"],
       "@app/hooks/*": ["./src/hooks/*"],
       "@app/lib/*": ["./src/lib/*"],
-      "@app/declarations/*": ["./src/declarations/*"],
     },
   },
   "exclude": ["**/node_modules", "**/.*/*"],
