--- a/frontend/apps/internet-identity-middleware/tsconfig.json
+++ b/frontend/apps/internet-identity-middleware/tsconfig.json
@@ -19,9 +19,9 @@
     "jsx": "react-jsx",
     "paths": {
       "@ui/*": ["./src/components/ui/*"],
-      "@lib/*": ["./src/lib/*"]
-    }
+      "@lib/*": ["./src/lib/*"],
+    },
   },
   "include": ["src"],
-  "exclude": ["node_modules", "build"]
+  "exclude": ["node_modules", "build"],
 }
