--- a/frontend/apps/webapp/package.json
+++ b/frontend/apps/webapp/package.json
@@ -10,11 +10,13 @@
     "clean": "rm -rf node_modules && rm -rf .next && rm -rf build && rm -rf .turbo && rm -f next-env.d.ts"
   },
   "dependencies": {
-    "@dfinity/agent": "^0.20.2",
-    "@dfinity/auth-client": "^0.20.2",
-    "@dfinity/candid": "^0.20.2",
-    "@dfinity/identity": "^0.20.2",
-    "@dfinity/principal": "^0.20.2",
+    "@bundly/ic-core-js": "^0.4.1",
+    "@bundly/ic-react": "^0.4.1",
+    "@dfinity/agent": "^0.21.4",
+    "@dfinity/auth-client": "^0.21.4",
+    "@dfinity/candid": "^0.21.4",
+    "@dfinity/identity": "^0.21.4",
+    "@dfinity/principal": "^0.21.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -22,8 +24,6 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "firebase": "^10.7.1",
-    "ic-core-js": "*",
-    "ic-react": "*",
     "lucide-react": "^0.294.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
