--- a/frontend/apps/mobileapp/.env-example
+++ b/frontend/apps/mobileapp/.env-example
@@ -1,7 +1,7 @@
 # APP
-APP_LINK_URL = 
+EXPO_PUBLIC_APP_LINK = "exp://192.168.0.125:8081"
 
 # ICP
 DFX_NETWORK = 
-INTERNET_IDENTITY_URL =
-IC_HOST =
+EXPO_PUBLIC_IC_HOST_URL = 
+EXPO_PUBLIC_INTERNET_IDENTITY_URL = 
