--- a/frontend/apps/mobileapp/package.json
+++ b/frontend/apps/mobileapp/package.json
@@ -10,27 +10,29 @@
     "clean": "rm -rf .expo && rm -rf .turbo && rm -rf node_modules"
   },
   "dependencies": {
+    "@bundly/ic-core-js": "^0.4.1",
+    "@bundly/ic-react": "^0.4.1",
+    "@bundly/ic-react-native": "^0.4.1",
     "big-integer": "^1.6.52",
     "classnames": "^2.5.1",
-    "expo": "~49.0.15",
-    "expo-constants": "~14.4.2",
+    "expo": "~50.0.3",
+    "expo-constants": "~15.4.5",
+    "expo-device": "^5.9.3",
     "expo-image-picker": "~14.3.2",
-    "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.0",
-    "expo-status-bar": "~1.6.0",
+    "expo-linking": "~6.2.2",
+    "expo-router": "~3.4.5",
+    "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "^12.8.2",
     "firebase": "^10.7.1",
-    "ic-core-js": "*",
-    "ic-react": "*",
-    "ic-react-native": "*",
     "lucide-react-native": "^0.302.0",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.2",
     "react-native-get-random-values": "~1.9.0",
     "react-native-polyfill-globals": "^3.1.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-svg": "13.9.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
@@ -39,9 +41,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.45",
     "@types/uuid": "^9.0.7",
-    "react-native-dotenv": "^3.4.9",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.1.3"
   }
