fix bunde error

--- a/frontend/apps/mobileapp/.env-example
+++ b/frontend/apps/mobileapp/.env-example
@@ -4,4 +4,5 @@ EXPO_PUBLIC_APP_LINK = "exp://192.168.0.125:8081"
 # ICP
 DFX_NETWORK = 
 EXPO_PUBLIC_IC_HOST_URL = 
+EXPO_PUBLIC_USER_CANISTER_ID = 
 EXPO_PUBLIC_INTERNET_IDENTITY_URL = 
