change bundly packages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "d-snap",
-  "version": "0.2.0",
+  "version": "0.3.0-rc.0",
   "description": "Open Source Decentralized Photo Social Network",
   "author": "MichiLabs",
   "license": "ISC",
