--- a/frontend/apps/mobileapp/package.json
+++ b/frontend/apps/mobileapp/package.json
@@ -10,15 +10,16 @@
     "clean": "rm -rf .expo && rm -rf .turbo && rm -rf node_modules"
   },
   "dependencies": {
-    "@bundly/ic-core-js": "^0.4.1",
-    "@bundly/ic-react": "^0.4.1",
-    "@bundly/ic-react-native": "^0.4.1",
+    "@bundly/ares-core": "^0.1.0-rc.0",
+    "@bundly/ares-react": "^0.1.0-rc.0",
+    "@bundly/ares-react-native": "^0.1.0-rc.0",
+    "@dfinity/agent": "^1.0.1",
     "big-integer": "^1.6.52",
     "classnames": "^2.5.1",
     "expo": "~50.0.3",
     "expo-constants": "~15.4.5",
     "expo-device": "^5.9.3",
-    "expo-image-picker": "~14.3.2",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.5",
     "expo-status-bar": "~1.11.1",
@@ -36,7 +37,8 @@
     "react-native-svg": "13.9.0",
     "react-native-url-polyfill": "^2.0.0",
     "text-encoding": "^0.7.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
