--- a/frontend/apps/webapp/package.json
+++ b/frontend/apps/webapp/package.json
@@ -10,13 +10,13 @@
     "clean": "rm -rf node_modules && rm -rf .next && rm -rf build && rm -rf .turbo && rm -f next-env.d.ts"
   },
   "dependencies": {
-    "@bundly/ic-core-js": "^0.4.1",
-    "@bundly/ic-react": "^0.4.1",
-    "@dfinity/agent": "^0.21.4",
-    "@dfinity/auth-client": "^0.21.4",
-    "@dfinity/candid": "^0.21.4",
-    "@dfinity/identity": "^0.21.4",
-    "@dfinity/principal": "^0.21.4",
+    "@bundly/ares-core": "^0.1.0-rc.0",
+    "@bundly/ares-react": "^0.1.0-rc.0",
+    "@dfinity/agent": "^1.0.1",
+    "@dfinity/auth-client": "^1.0.1",
+    "@dfinity/candid": "^1.0.1",
+    "@dfinity/identity": "^1.0.1",
+    "@dfinity/principal": "^1.0.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
