--- a/frontend/apps/mobileapp/app.json
+++ b/frontend/apps/mobileapp/app.json
@@ -14,7 +14,8 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "app.dsnap.com"
     },
     "android": {
       "adaptiveIcon": {
