--- a/frontend/apps/mobileapp/package.json
+++ b/frontend/apps/mobileapp/package.json
@@ -25,16 +25,16 @@
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "^12.8.2",
     "firebase": "^10.7.1",
-    "lucide-react-native": "^0.302.0",
+    "lucide-react-native": "^0.343.0",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-get-random-values": "~1.9.0",
+    "react-native": "0.73.4",
+    "react-native-get-random-values": "1.8.0",
     "react-native-polyfill-globals": "^3.1.0",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "13.9.0",
+    "react-native-svg": "14.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "text-encoding": "^0.7.0",
     "uuid": "^9.0.1",
@@ -44,6 +44,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/uuid": "^9.0.7",
+    "expo-dev-client": "^3.3.9",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.1.3"
   }
