change bundly packages, and fix build error

--- a/frontend/apps/mobileapp/app.json
+++ b/frontend/apps/mobileapp/app.json
@@ -14,8 +14,7 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "app.dsnap.com"
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
@@ -24,8 +23,6 @@
       }
     },
     "web": {
-      "bundler": "metro",
-      "output": "static",
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
@@ -36,9 +33,6 @@
           "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
       ]
-    ],
-    "experiments": {
-      "typedRoutes": true
-    }
+    ]
   }
 }
