--- a/frontend/apps/mobileapp/package.json
+++ b/frontend/apps/mobileapp/package.json
@@ -11,27 +11,27 @@
   },
   "dependencies": {
     "@bundly/ares-core": "^0.1.0-rc.0",
-    "@bundly/ares-react": "^0.1.0-rc.0",
+    "@bundly/ares-react": "^0.1.0-rc.1",
     "@bundly/ares-react-native": "^0.1.0-rc.0",
     "@dfinity/agent": "^1.0.1",
     "big-integer": "^1.6.52",
     "classnames": "^2.5.1",
-    "expo": "~50.0.3",
+    "expo": "^50.0.8",
     "expo-constants": "~15.4.5",
     "expo-device": "^5.9.3",
     "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.5",
+    "expo-router": "~3.4.8",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "^12.8.2",
     "firebase": "^10.7.1",
     "lucide-react-native": "^0.343.0",
-    "nativewind": "^4.0.1",
+    "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-get-random-values": "1.8.0",
     "react-native-polyfill-globals": "^3.1.0",
-    "react-native-reanimated": "3.6.2",
+    "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
@@ -45,7 +45,7 @@
     "@types/react": "~18.2.45",
     "@types/uuid": "^9.0.7",
     "expo-dev-client": "^3.3.9",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.1.3"
   }
 }
